--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "del": "^2.2.1",
     "editorconfig-tools": "0.1.1",
     "gulp": "3.9.1",
+    "gulp-convert-newline": "0.0.3",
     "gulp-csso": "^2.0.0",
     "gulp-imagemin": "^3.0.1",
     "gulp-plumber": "1.1.0",
